<resources>
    <string name="app_name">MoneyManager</string>
    <string name="home">Home</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="view_transactions">View Transactions</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_description">Enter Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_money_manager">Welcome to Money Manager</string>
    <string name="get_started">Get Started</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="transaction_history">Transaction History</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="sign_in">Sign In</string>
    <string name="amount">Amount</string>
    <string name="welcome_back">Welcome Back!</string>

</resources>