<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/money_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTransactionBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/add_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/viewTransactionsBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_green"
        android:text="@string/view_transactions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addTransactionBtn" />

    <Button
        android:id="@+id/reportsBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_purple"
        android:text="@string/reports"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTransactionsBtn" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportsBtn" />

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileBtn" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
