<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/money_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="225dp" />

    <Spinner
        android:id="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/addTransactionBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="317dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
